refactor: update to SAWS

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href='https://cdn.materialdesignicons.com/4.4.95/css/materialdesignicons.min.css' rel="stylesheet">
 
-    <title>Lightweigt iTunes Catalog</title>
+    <title>SAWS Challenge</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but codesandbox doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
